tests/pass/Remainder.java
package pass;

import java.lang.System;

public class Remainder {
    public static int remainder(int x, int y) {
        return x%y;
    }

    public static void main(String[] args) {
        System.out.println(remainder(10, 3));
    }
}
