tests/fail/BitwiseOrErrors.java
package fail;

import java.lang.System;

public class BitwiseOrErrors {
    public static void main(String[] args){
        System.out.println( 'a' | 0);
    }
}